# pdfctl

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests_if_present.py
.github/workflows/: ci.yml  publish.yml
pdfctl/: cli.py  ranges.py
src/pdfctl/: __init__.py  app.py  gui.py  ranges.py  runner.py  web.py
tools/: install_all.py  packages.json  publish_pypi.py  update_changelog.py  verify_release.py
