[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfctl"
version = "0.1.0"
description = "Command-line PDF toolbox: merge, split, extract, rotate, metadata, encrypt/decrypt."
authors = [{ name = "Tamer Hamad Faour" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=6.1.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
pdfctl = "pdfctl.cli:app"
pdfctl-gui = "pdfctl.gui:main"

[tool.setuptools.package-data]
"pdfctl" = []
