[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfctl"
version = "0.1.0"
description = "Command-line & GUI/Streamlit tools to merge/split/extract/rotate PDFs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pypdf>=5.1.0",
  "typer>=0.12.5",
  "rich>=13.7.1",
  "streamlit>=1.50.0",
]

[project.scripts]
pdfctl = "pdfctl.cli:app"
pdfctl-gui = "pdfctl.gui:main"
pdfctl-web = "pdfctl.web:main"

# عند استخدام Streamlit سنثبتها ونشغلها بأمر streamlit مباشرة
# أو يمكنك إضافة:
# pdfctl-web = "pdfctl.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["out*", "build*", "dist*"]  # مهم لاستبعاد out

[tool.setuptools.package-data]
"pdfctl" = []
