[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfctl"                        
version = "0.1.2"
description = "Simple web UI to merge/split/extract/rotate PDFs using pypdf + Streamlit."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Tamer Hamad Faour"}]
keywords = ["pdf","merge","split","rotate","streamlit","pypdf","webui"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pypdf>=5.1.0"
]

[project.optional-dependencies]
web = ["streamlit>=1.50.0"]

[project.scripts]
pdfctl-web = "pdfctl.web:main"

[project.urls]
Homepage = "https://github.com/your-user/pdfctl"
Issues = "https://github.com/your-user/pdfctl/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["out*", "build*", "dist*"]

[tool.setuptools.package-data]
"pdfctl" = []
